--- a/TreasureFinderClient/TreasureFinderClient.csproj
+++ b/TreasureFinderClient/TreasureFinderClient.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
 <ItemGroup>
+ <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0" />
+    <PackageReference Include="runtime.osx.10.10-x64.CoreCompat.System.Drawing" Version="5.8.64" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   <PackageReference Include="RestSharp" Version="106.6.10" />
   <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 </ItemGroup>
